--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
 title: Welcome to JRGTH Homepage!
-description: Free Open Source and diy resources.
+description: Free Open Source and diy stuff.
